# django-strategy-field

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGES  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
requirements/: develop.pip  testing.pip
src/requirements/: develop.pip  testing.pip
src/strategy_field/: __init__.py  config.py  exceptions.py  fields.py  forms.py  registry.py  resolver.py  utils.py  validators.py
src/strategy_field/contrib/: __init__.py  drf.py
strategy_field/: __init__.py  fields.py  forms.py  registry.py  utils.py
tests/: .coveragerc  conftest.py  fixtures.py  test_base.py  test_choice.py  test_choice_as_class.py  test_choice_as_instance.py  test_choice_custom.py  test_classloader.py  test_descriptors.py  test_drf.py  test_dumpdata.py  test_field.py  test_form.py  test_hash.py  test_multiple.py  test_multiple_custom.py  test_noregistry.py  test_raw_value.py  test_registry.py  test_utils.py  test_validators.py
tests/demo/: admin.py  fields.py  manage.py  models.py  settings.py  urls.py
tests/demo/demoproject/: backends.py  classloader.py  compat.py  settings.py  urls.py  wsgi.py
tests/demo/demoproject/demoapp/: __init__.py  admin.py  api.py  apps.py  models.py
tests/demo/demoproject/demoapp/migrations/: 0001_initial.py
